# Multigen

./: .dockerignore  .env.example  404.html  Capabilities.txt  Dockerfile.capability  Dockerfile.orchestrator  README.md  docker-compose.yml  index.html  mkdocs.yml  requirements.txt  ruff.toml  sitemap.xml
Agent-Components/: README.md  advanced_learning.md  docs.md  docs_cli.md  pyproject.toml  setup.py
Agent-Components/.github/workflows/: python-package.yml
Agent-Components/agentic_codex/: __init__.py  cli.py  plugins.py
Agent-Components/agentic_codex/core/: __init__.py  agent.py  builder.py  cancel.py  capabilities.py  embeddings.py  interfaces.py  kernel.py  llm.py  memory.py  message_bus.py  output.py  prompting.py  schemas.py  skills.py  stores.py  tools.py  vector_db.py
Agent-Components/agentic_codex/eval/: evaluator.py  golden_runner.py
Agent-Components/agentic_codex/examples/: agentic_feature_exhaustive_showcase.ipynb  agentic_feature_showcase.ipynb  assembly_demo.ipynb  capability_showcase.ipynb  code_quality_loop.ipynb  code_workflow_agents.ipynb  contract_net_demo.ipynb  graph_runner_branching.ipynb  hierarchy_showcase.ipynb  manifest_tool_registration.ipynb  market_mix_mmm_agents.ipynb  mcp_tools_demo.ipynb  model_lab_demo.ipynb  mtcars_linear_regression_agents.ipynb  observability_overview.ipynb  openai_builder_demo.ipynb  openai_full_workflow.py  openai_swarm_demo.ipynb  production_end_to_end.ipynb  query_agent.py  run_store_replay.ipynb  swarm_demo.ipynb  with_steps_metrics.ipynb  with_steps_orchestration.ipynb
Agent-Components/agentic_codex/manifests/: hot_reload.py  loaders.py  validators.py
Agent-Components/agentic_codex/mcp/: __init__.py
Agent-Components/agentic_codex/patterns/: __init__.py  catalog.py  collective.py  federation.py  graph.py  market.py  (+3 more)
Agent-Components/tests/: test_capabilities.py  test_cli.py  test_llm.py  test_manifest.py  test_orchestration.py  test_pattern_catalog.py  test_patterns.py  test_patterns_extended.py  test_schemas.py
sdk/: pyproject.toml
sdk/examples/: quickstart.py
sdk/multigen/: __init__.py  advanced_memory.py  adversarial.py  agent.py  agent_trust.py  behavioral.py  bus.py  cache.py  chain.py  client.py  compose.py  connectors.py  debugger.py  dsl.py  eval.py  eval_advanced.py  eval_longitudinal.py  exceptions.py  feedback_loop.py  graph.py  hierarchy.py  inheritance.py  knowledge.py  learning.py  lifecycle.py  llm_adapter.py  local_runner.py  memory.py  memory_sync.py  messaging.py  models.py  observability.py  optimization.py  parallel.py  performance.py  persistence.py  planning.py  planning_advanced.py  polymorphic.py  prompt_registry.py  (+21 more)
(+272 files in other folders)
