[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multigen-sdk"
version = "0.2.0"
description = "Python client SDK for the Multigen multi-agent orchestration framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Multigen Team" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["multigen*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
