[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multigen-sdk"
version = "0.3.0"
description = "The most advanced open-source agentic framework — chains, graphs, MCMC state machines, pub/sub, parallel execution, and optional Temporal/Kafka backends"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Multigen Team" }]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai   = ["openai>=1.0"]
temporal = ["temporalio>=1.0"]
kafka    = ["aiokafka>=0.10"]
all      = ["openai>=1.0", "temporalio>=1.0", "aiokafka>=0.10"]
dev      = ["pytest", "pytest-asyncio", "respx", "openai>=1.0"]

[project.urls]
Homepage = "https://github.com/Subhagatoadak/Multigen"
Documentation = "https://github.com/Subhagatoadak/Multigen/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["multigen*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
